@@ -51,7 +51,7 @@ use experimental qw(signatures);
 
 use Role::Tiny;
 
-our @WRITE_METHODS = qw(set getset push unshift pop shift hash_set hash_add);
+our @WRITE_METHODS = qw(set getset incr push unshift pop shift hash_set hash_add);
 our @READ_METHODS = qw(get observe watch_keyspace hash_get hash_keys hash_values hash_exists hash_count hash_as_list);
 
 requires $_ for @WRITE_METHODS;
