@@ -8,6 +8,8 @@ Revision history for {{$dist->name}}
     - Syntax::Keyword::Match is now imported in Myriad::Service code
     - Redis: A service will not create another service's stream.
     - Allow service namespaces by adding '::*' to the startup command.
+    [New features]
+    - Added incr method for storage keys.
 
 0.008     2021-06-18 05:24:31+00:00 UTC
     [API Changes]
